Fixed "Popover inline content property not storing the value, Popover in dialog is having z-index issue"

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -405,11 +405,9 @@ html, body {
 }
 .wm-app .app-popover.popover{
   max-width : none;
+  position  : fixed;
 }
-/* popover class makes widget overlap dialog */
-.wm-app .popover {
-  z-index: 1030 !important;
-}
+
 .app-tree {
   position: relative;
   .user-select-none();
